syntax = "proto3";

package api.ai.v1;

option go_package = ".;aiv1";

message PingRequest {}

message PingResponse {}

message ProcessRequest { string id = 1; }

message ProcessResponse {
  int32 return_code = 1;
  string return_message = 2;
  string trans_id = 3;
}

message GetStatusRequest { string trans_id = 1; }

message GetStatusResponse {
  int32 return_code = 1;
  string return_message = 2;
  string id = 3;
}

service AIService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Process(ProcessRequest) returns (ProcessResponse);
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}
